--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/storage": "^6.5.0",
     "@aws-amplify/ui-react": "^6.1.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/aws-lambda": "^8.10.140",
     "@types/node": "^20.14.9",
-    "aws-amplify": "^6.3.8",
+    "aws-amplify": "^6.4.0",
     "aws-sdk": "^2.1650.0",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
